Fix alignment

--- a/personal-portfolio/styles/style.css
+++ b/personal-portfolio/styles/style.css
@@ -401,7 +401,7 @@ button:hover {
   height: 200px;
   background-image: url("../img/icon-languages.svg");
   background-repeat: no-repeat;
-  margin-left: 37%;
+  margin-left: auto;
 }
 
 .card_img2 {
@@ -513,7 +513,7 @@ form {
 
 .socials {
   display: table;
-  margin-left: -160px;
+  margin-left: auto;
 }
 
 .socials:hover {
